improved some deprecated java reflection method uses